# Video2LoRA

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
demo/: __init__.py  utils.py
scripts/frames2lora/: build_finevideo_stage1_manifest.py  generate_finevideo_teacher_targets.py  infer.py  train_smolvlm_online.py  train_smolvlm_stage1.py  train_smolvlm_stage1_selfdistill.py
src/ctx_to_lora/data/: video_manifest.py
