[project]
name = "frames2lora"
version = "0.1.0"
authors = [{ name = "Frames2LoRA authors" }]
description = "Video-conditioned LoRA generation for vision-language models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.6.0",
    "av>=17.0.0",
    "bitsandbytes>=0.46.1",
    "datasets==3.6.0",
    "decord",
    "einops",
    "gdown>=5.1.0",
    "hf_transfer",
    "huggingface-hub[hf-transfer]>=0.32.0",
    "jaxtyping",
    "liger-kernel",
    "matplotlib",
    "num2words",
    "numpy",
    "opt-einsum>=3.4.0",
    "pandas",
    "peft",
    "plotly",
    "pyyaml",
    "rouge-score",
    "setuptools",
    "tensorboard",
    "tensorboardX",
    "tokenizers",
    "torch>=2.6.0",
    "torchmetrics",
    "torchvision>=0.21.0",
    "transformers==4.51.3",
    "wandb",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".venv",
    ".github",
    ".vscode",
    "assets",
    "checkpoints",
    "data",
    "outputs",
    "runs",
    "tmp",
    "wandb",
]
typeCheckingMode = "off"

[tool.ruff]
line-length = 88
select = ["F401"]
ignore = ["E", "F"]

[tool.isort]
profile = "black"
known_local_folder = ["ctx_to_lora"]
